[FIX] Ahora compila.

--- a/memoria/bibliografia/bibliografia.bib
+++ b/memoria/bibliografia/bibliografia.bib
@@ -3,7 +3,7 @@ author = {Silberschatz and Galvin and Gagne},
 title = {Fundamentos de sistemas operativos},
 date = {2005},
 OPTedition = {7},
-pages = {45-65},
+pages = {45 - 65},
 }
 @misc{vmware,
 title = {Página oficial de {VM}ware},
@@ -30,7 +30,7 @@ author = {Gerald J, Popek and Robert P. Goldberg},
 title = {Formal Requirements for Virtualizable Third Generation Architectures},
 journal = {Communications of the ACM},
 year = {1974},
-pages = {412-421},
+pages = {412 - 421},
 volume = {17},
 number = {7},
 }
