--- a/memoria/partes/a/capitulo2.tex
+++ b/memoria/partes/a/capitulo2.tex
@@ -5,23 +5,8 @@
 \section{Tipos de Virtualización}
 En el apartado anterior ya se pudo vislumbrar que existen diferentes formas de virtualización, y por ello, nosotros las vamos a nombrar todos los tipos y haremos, para cada uno, una pequeña descripción:
 
-\subsection{Arquitectura del 
+\subsection{Arquitectura del hipervisor}
 
-
-\section{Componentes}
-
-El esquema básico es el siguiente:
-
-\begin{center}
-\begin{tikzpicture}
-\path (0,0) coordinate (A) {}
-        (1,1) coordinate (B) {}
-  (3,0) coordinate (C) {};
-\draw[dashed] (A) -- (B) -- (C);
-\end{tikzpicture}
-\end{center}
-
-hipervisor}
 \subsection{La arquitectura de Xen}
 \subsection{Traducción binaria en la virtualización completa}
 \subsection{Virtualización completa}
