Se incluye el archivo para guardar las figuras

--- a/memoria/memoria.tex
+++ b/memoria/memoria.tex
@@ -36,6 +36,7 @@ GIS:  	 & Carlos Vázquez Sánchez
 
 % Incluye archivo para utilizar el comando \portada
 \include{portada}
+\include{figuras}
 
 
 \begin{document}
