Añadida más información al capítulo 2 parte b
He añadido más información al capítulo 2 de la parte b y he creado una
nueva figura que describe la interacción entre los agentes y la pizarra.

--- a/memoria/bibliografia/bibliografia.bib
+++ b/memoria/bibliografia/bibliografia.bib
@@ -15,10 +15,17 @@ howpublished={\url{http://www.vmware.com/es/}},
 title = {Página oficial del proyecto {X}en},
 howpublished={\url{http://www.xenproject.org/about/history.html}},
 }
+
 @misc{proyectoxen2,
 title = {Página de la {U}niversidad de {C}ambridge del proyecto{X}enoserver},
 howpublished={\url{http://www.cl.cam.ac.uk/research/srg/netos/xeno/}},
 }
+
+@misc{blackboardsystem,
+title = {Blackboard Systems},
+howpublished={\url{http://cs.uni.edu/~wallingf/teaching/162/readings/blackboard-systems.pdf}},
+}
+
 
 @Misc{defvirwiki,
 author = {Wikipedia},
