Actualizado figuras.tex

--- a/memoria/figuras.tex
+++ b/memoria/figuras.tex
@@ -1,22 +1,54 @@
 \usepackage{tikz}
+\usepackage{xstring}
 
-% Aquí van todas las figuras en TikZ
+% Aquí van todas las figuras en TikZ, hay que asignarlas un numero para poder cambiar todas a la vez.
 
-\newcommand{\esquemavm}{
+\newcommand{\figura}[1]{
+	\IfEqCase{#1}{
+		{1}{\figurahipA}
+		{2}{\figurahipB}
+		{3}{\pizarra}
+	}[\PackageError{figura}{Figura no declarada: #1}{}]
+}
+
+
+% Aqui se añaden las figuras %
+\newcommand{\figurahipA}{
 \begin{tikzpicture}
-	\draw[fill=blue!40, thick] (0,2) rectangle (2,3);
-	\draw[fill=blue!40, thick] (2,2) rectangle (4,3);
-	\draw[fill=blue!40, thick] (6,2) rectangle (8,3);
-	\draw[fill=blue!40, thick] (8,2) rectangle (10,3);
-	\draw[fill={gray!30}, thick] (0,1) rectangle (10,2); 
+	\draw[fill=gray!30, thick] (0,2) rectangle (2,3);
+	\draw[fill=gray!30, thick] (2,2) rectangle (4,3);
+	\draw[fill=gray!30, thick] (6,2) rectangle (8,3);
+	\draw[fill=gray!30, thick] (8,2) rectangle (10,3);
+	\draw[fill={blue!40}, thick] (0,1) rectangle (10,2); 
 	\draw[fill=yellow!40, thick] (0,0) rectangle (10,1); 
-	
-	\node at (1,2.5) {$VM_1$};
-	\node at (3,2.5) {$VM_2$};
+
+	\node at (1,2.5) {${VM}_1$};
+	\node at (3,2.5) {${VM}_2$};
 	\node at (5,2.5) {\textbf{...}};
-	\node at (7,2.5) {$VM_{n-1}$};
-	\node at (9,2.5) {$VM_n$};
-	\node at (5,1.5) {\textsc{Virtual Machine Monitor (CP)}};
+	\node at (7,2.5) {${VM}_{n-1}$};
+	\node at (9,2.5) {${VM}_n$};
+	\node at (5,1.5) {\textsc{Hipervisor o VMM}};
+	\node at (5,0.5) {\textsc{Hardware}};
+\end{tikzpicture}
+}
+
+\newcommand{\figurahipB}{
+\begin{tikzpicture}
+	\draw[fill=gray!30, thick] (0,3) rectangle (2,4);
+	\draw[fill=gray!30, thick] (2,3) rectangle (4,4);
+	\draw[fill=gray!30, thick] (6,3) rectangle (8,4);
+	\draw[fill=gray!30, thick] (8,3) rectangle (10,4);
+	\draw[fill={blue!40}, thick] (0,2) rectangle (10,3);
+	\draw[fill={red!40}, thick] (0,1) rectangle (10,2); 
+	\draw[fill=yellow!40, thick] (0,0) rectangle (10,1); 
+
+	\node at (1,3.5) {${VM}_1$};
+	\node at (3,3.5) {${VM}_2$};
+	\node at (5,3.5) {\textbf{...}};
+	\node at (7,3.5) {${VM}_{n-1}$};
+	\node at (9,3.5) {${VM}_n$};
+	\node at (5,2.5) {\textsc{Software de virtualización}};
+	\node at (5,1.5) {\textsc{Sistema operativo} {\tiny (Anfitrion)}};
 	\node at (5,0.5) {\textsc{Hardware}};
 \end{tikzpicture}
 }
