--- a/memoria/bibliografia/bibliografia.bib
+++ b/memoria/bibliografia/bibliografia.bib
@@ -11,6 +11,12 @@ title = {Página oficial de {VM}ware},
 howpublished={\url{http://www.vmware.com/es/}},
 }
 
+@misc{tipoship,
+title = {\emph{<<{L}a anatomía de un hipervisor {L}inux>>}},
+author = {M. Tim Jones.},
+howpublished={\url{http://www.ibm.com/developerworks/ssa/library/l-hypervisor/index.html}},
+}
+
 @misc{proyectoxen,
 title = {Página oficial del proyecto {X}en},
 howpublished={\url{http://www.xenproject.org/about/history.html}},
