--- a/memoria/glosario.bib
+++ b/memoria/glosario.bib
@@ -16,6 +16,16 @@ definition = {Software que simula a una computadora y puede ejecutar programas c
 short-word = {máquina virtual},
 }
 
+@GLOSDEF{HYP,
+word= {Hypervisor},
+definition ={Plataforma que permite aplicar diversas técnicas de control de virtualización},
+}
+
+@GLOSDEF{XEN,
+word = {Xen},
+definition = {Hipervisor de código abierto desarrollado por la Universidad de Cambridge},
+}
+
 @GLOSSDEF{JVM,
 word = {Java Virtual Machine},
 definition = {Máquina virtual de la plataforma Java},
