--- a/memoria/partes/a/capitulo2.tex
+++ b/memoria/partes/a/capitulo2.tex
@@ -1,4 +1,4 @@
-\chapter{Descripción de la arquitectura de virtualización}
+\chapter[Descripción de la arquitectura]{Descripción de la arquitectura de virtualización}
 
 \lettrine[lines=1,slope=4pt,findent=0pt]{U}{}na vez introducido el vocabulario básico y tras haber indagado un poco más en la materia vamos a centrarnos en la arquitectura como tal.\\
 
