--- a/memoria/partes/b/capitulo1.tex
+++ b/memoria/partes/b/capitulo1.tex
@@ -3,7 +3,7 @@
 
 En primer lugar debemos describir qué es exactamente una arquitectura de pizarra, para seguidamente poder analizar en detalle la plataforma a crear.\\
 
-La arquitectura de pizarra puede ser presentada con la siguiente metáfora:~\cite{blackboardsystem}
+La arquitectura de pizarra puede ser presentada con la siguiente metáfora~\cite{blackboardsystem}
 
 \begin{quote}
 Imagine a group of human specialists seated next to a large blackboard. The specialists are working cooperatively to solve a problem, using the blackboard as the workspace for developing the solution.\\
