Mejoras en presentación
Cambios:

[FIX] Error en "twosides" -
https://github.com/KekoAlk/Practica_DAS/issues/12
Cambio de orden entre glosario y bibliografía, ésta va siempre al final
-
http://aprendeenlinea.udea.edu.co/revistas/index.php/ceo/article/viewFile/1609/1262

--- a/memoria/memoria.tex
+++ b/memoria/memoria.tex
@@ -9,7 +9,7 @@
 \usepackage{lettrine}
 \usepackage{float}
 \usepackage{color}
-\usepackage[left=3.00cm, right=3.00cm, top=3.00cm]{geometry}
+\usepackage[top=2cm,bottom=4cm,left=3cm,right=1.5cm,asymmetric]{geometry}
 \usepackage[nottoc]{tocbibind}	%Para mostrar la bibliografia en el índice
 \usepackage{tikz}
 \usepackage[refpages]{gloss} % Para el glosario
@@ -74,12 +74,15 @@ GIS:  	 & Carlos Vázquez Sánchez
 \input{./partes/b/parteB.tex}
 
 \backmatter % Bibliografia, lista de figuras, glosario, ...
-
-\bibliographystyle{plain}
-\bibliography{./bibliografia/bibliografia}
+\newpage{\ } %Añadida página para que no acabe y comience el glosario
 
 \printgloss{./glosario}
 
 \listoffigures
+
+\bibliographystyle{plain}
+\bibliography{./bibliografia/bibliografia}
+
+
 
 \end{document}
