Añadido artículo a la bibliografía
Añadido el artículo de Nii donde describe la arquitectura de pizarra.

--- a/memoria/bibliografia/bibliografia.bib
+++ b/memoria/bibliografia/bibliografia.bib
@@ -64,3 +64,11 @@ number = {7},
  isbn = {0470167742, 9780470167748},
  publisher = {Wiley Publishing},
 } 
+
+@article{nii,
+  author = {Nii, H. Penny},
+  journal = {AI Magazine},
+  number = 2,
+  title = {Blackboard Systems},
+  year = {1986}
+}
