Definición extra capítulo 2

--- a/memoria/partes/b/capitulo1.tex
+++ b/memoria/partes/b/capitulo1.tex
@@ -42,3 +42,17 @@ Las arquitecturas en pizarra presentan una serie de inconvenientes importantes. 
 \pizarra
 \caption{Interacción entre los agentes y la pizarra}
 \end{figure}
+
+Una vez analizada como deberá ser la infraestrucura de pizarra, se pide diseñar una biblioteca (un framework en nuestro caso). Para ello, y siguiendo nuestro esquema general, procedemos primero a dar algunas definiciones básicas:\\
+
+\section{¿Qué es la un framework?}
+Un framework o infraestructura digital, es una estructura conceptual y tecnológica de soporte definido normalmente con artefactos o módulos de software concretos que puede servir de base para la organización y desarrollo de software.
+Desde el punto de vista de su arquitectura, se basa en el modelo MVC (Controlador, Modelo, Vista), ya que debemos fragmentar nuestra programación:
+
+
+\begin{itemize}
+\item \textbf{Modelo:} controla las operaciones lógicas y l manejo de información.
+\item \textbf{Vista:}finalmente a un miembro miembro de la familia le corresponde expresar la última forma de los datos: la interfaz gráfica que interactúa con el usuario final del programa (GUI).
+\item \textbf{Controlador:} responsable de controlar el acceso a nuestra aplicación, incluyendo cualquier tipo de información que permita la interfaz.
+\end{itemize}
+
