Mejoradas las figuras de la primera parte

--- a/memoria/figuras.tex
+++ b/memoria/figuras.tex
@@ -16,18 +16,18 @@
 % Aqui se añaden las figuras %
 \newcommand{\figurahipA}{
 \begin{tikzpicture}
-	\draw[fill=gray!30, thick] (0,2) rectangle (2,3);
-	\draw[fill=gray!30, thick] (2,2) rectangle (4,3);
-	\draw[fill=gray!30, thick] (6,2) rectangle (8,3);
-	\draw[fill=gray!30, thick] (8,2) rectangle (10,3);
-	\draw[fill={blue!40}, thick] (0,1) rectangle (10,2); 
-	\draw[fill=yellow!40, thick] (0,0) rectangle (10,1); 
+	\draw[rounded corners=3mm, fill=gray!30, thick] (0.05,2) rectangle (1.95,4);
+	\draw[rounded corners=3mm, fill=gray!30, thick] (2.05,2) rectangle (3.95,4);
+	\draw[rounded corners=3mm, fill=gray!30, thick] (6.05,2) rectangle (7.95,4);
+	\draw[rounded corners=3mm, fill=gray!30, thick] (8.05,2) rectangle (9.95,4);
+	\draw[rounded corners=3mm, fill={blue!40}, thick] (0,1) rectangle (10,2); 
+	\draw[rounded corners=3mm, fill=yellow!40, thick] (0,0) rectangle (10,1); 
 
-	\node at (1,2.5) {${VM}_1$};
-	\node at (3,2.5) {${VM}_2$};
-	\node at (5,2.5) {\textbf{...}};
-	\node at (7,2.5) {${VM}_{n-1}$};
-	\node at (9,2.5) {${VM}_n$};
+	\node at (1,3) {${VM}_1$};
+	\node at (3,3) {${VM}_2$};
+	\node at (5,3) {\textbf{...}};
+	\node at (7,3) {${VM}_{n-1}$};
+	\node at (9,3) {${VM}_n$};
 	\node at (5,1.5) {\textsc{Hipervisor o VMM}};
 	\node at (5,0.5) {\textsc{Hardware}};
 \end{tikzpicture}
@@ -35,19 +35,19 @@
 
 \newcommand{\figurahipB}{
 \begin{tikzpicture}
-	\draw[fill=gray!30, thick] (0,3) rectangle (2,4);
-	\draw[fill=gray!30, thick] (2,3) rectangle (4,4);
-	\draw[fill=gray!30, thick] (6,3) rectangle (8,4);
-	\draw[fill=gray!30, thick] (8,3) rectangle (10,4);
-	\draw[fill={blue!40}, thick] (0,2) rectangle (10,3);
-	\draw[fill={red!40}, thick] (0,1) rectangle (10,2); 
-	\draw[fill=yellow!40, thick] (0,0) rectangle (10,1); 
+	\draw[rounded corners=3mm, fill=gray!30, thick] (0.05,3) rectangle (1.95,5);
+	\draw[rounded corners=3mm, fill=gray!30, thick] (2.05,3) rectangle (3.95,5);
+	\draw[rounded corners=3mm, fill=gray!30, thick] (6.05,3) rectangle (7.95,5);
+	\draw[rounded corners=3mm, fill=gray!30, thick] (8.05,3) rectangle (9.95,5);
+	\draw[rounded corners=3mm, fill={blue!40}, thick] (0,2) rectangle (10,3);
+	\draw[rounded corners=3mm, fill={red!40}, thick] (0,1) rectangle (10,2); 
+	\draw[rounded corners=3mm, fill=yellow!40, thick] (0,0) rectangle (10,1); 
 
-	\node at (1,3.5) {${VM}_1$};
-	\node at (3,3.5) {${VM}_2$};
-	\node at (5,3.5) {\textbf{...}};
-	\node at (7,3.5) {${VM}_{n-1}$};
-	\node at (9,3.5) {${VM}_n$};
+	\node at (1,4) {${VM}_1$};
+	\node at (3,4) {${VM}_2$};
+	\node at (5,4) {\textbf{...}};
+	\node at (7,4) {${VM}_{n-1}$};
+	\node at (9,4) {${VM}_n$};
 	\node at (5,2.5) {\textsc{Software de virtualización}};
 	\node at (5,1.5) {\textsc{Sistema operativo} {\tiny (Anfitrion)}};
 	\node at (5,0.5) {\textsc{Hardware}};
@@ -56,21 +56,21 @@
 
 \newcommand{\figurahipBfin}{
 \begin{tikzpicture}
-	\draw[fill=green!30, thick] (0,2) rectangle (1.9,4);
-	\draw[fill=gray!30, thick] (2,3) rectangle (3.9,4);
-	\draw[fill=gray!30, thick] (6,3) rectangle (7.9,4);
-	\draw[fill=gray!30, thick] (8,3) rectangle (10,4);
-	\draw[fill={blue!40}, thick] (2,2) rectangle (10,3);
-	\draw[fill={red!40}, thick] (0,1) rectangle (10,2); 
-	\draw[fill=yellow!40, thick] (0,0) rectangle (10,1); 
+	\draw[rounded corners=3mm, fill=green!30, thick] (0,2) rectangle (1.90,5);
+	\draw[rounded corners=3mm, fill=gray!30, thick] (2.05,3) rectangle (3.95,5);
+	\draw[rounded corners=3mm, fill=gray!30, thick] (6.05,3) rectangle (7.95,5);
+	\draw[rounded corners=3mm, fill=gray!30, thick] (8.05,3) rectangle (9.95,5);
+	\draw[rounded corners=3mm, fill={blue!40}, thick] (2,2) rectangle (10,3);
+	\draw[rounded corners=3mm, fill={red!40}, thick] (0,1) rectangle (10,2); 
+	\draw[rounded corners=3mm, fill=yellow!40, thick] (0,0) rectangle (10,1); 
 
-	\node at (1,3.5) {Apps};
-	\node at (1,3) {del};
-	\node at (1,2.5) {S.O};
-	\node at (3,3.5) {${VM}_1$};
-	\node at (5,3.5) {\textbf{...}};
-	\node at (7,3.5) {${VM}_{n-1}$};
-	\node at (9,3.5) {${VM}_n$};
+	\node at (1,4) {Apps};
+	\node at (1,3.5) {del};
+	\node at (1,3) {S.O};
+	\node at (3,4) {${VM}_1$};
+	\node at (5,4) {\textbf{...}};
+	\node at (7,4) {${VM}_{n-1}$};
+	\node at (9,4) {${VM}_n$};
 	\node at (6,2.5) {\textsc{Software de virtualización}};
 	\node at (5,1.5) {\textsc{Sistema operativo} {\tiny (Anfitrion)}};
 	\node at (5,0.5) {\textsc{Hardware}};
