Añadido comando para reiniciar capítulo

--- a/memoria/memoria.tex
+++ b/memoria/memoria.tex
@@ -49,6 +49,11 @@ GIS:  	 & Carlos Vázquez Sánchez
 \include{portada}
 \include{figuras}
 
+% Reinicia el contador a 1 en cada parte
+\makeatletter
+\@addtoreset{chapter}{part} 
+\makeatother
+
 \begin{document}
 
 \frontmatter % Incluye índice, portada, prefacio, ...
