--- a/memoria/partes/b/capitulo1.tex
+++ b/memoria/partes/b/capitulo1.tex
@@ -45,7 +45,7 @@ Las arquitecturas en pizarra presentan una serie de inconvenientes importantes. 
 
 Una vez analizada como deberá ser la infraestrucura de pizarra, se pide diseñar una biblioteca (un framework en nuestro caso). Para ello, y siguiendo nuestro esquema general, procedemos primero a dar algunas definiciones básicas:\\
 
-\section{¿Qué es la un framework?}
+\section{¿Qué es un framework?}
 Un framework o infraestructura digital, es una estructura conceptual y tecnológica de soporte definido normalmente con artefactos o módulos de software concretos que puede servir de base para la organización y desarrollo de software.
 Desde el punto de vista de su arquitectura, se basa en el modelo MVC (Controlador, Modelo, Vista), ya que debemos fragmentar nuestra programación:
 
@@ -56,3 +56,20 @@ Desde el punto de vista de su arquitectura, se basa en el modelo MVC (Controlado
 \item \textbf{Controlador:} responsable de controlar el acceso a nuestra aplicación, incluyendo cualquier tipo de información que permita la interfaz.
 \end{itemize}
 
+\section{Ventajas de un framework}
+
+\begin{itemize}
+\item Minimiza tiempos de desarrollo. Los frameworks reducen la codificación y la puesta en marcha (proporcionan código que no se tendrá que mantener ni reescribir).
+\item Reduce los riesgos del desarrollo.
+\item Proporciona una arquitectura consistente entre aplicaciones, ya que todas las aplicaciones generadas comparten una arquitectura común. 
+\item El programador que trabaje con un framework no deberá invertir gran parte de su tiempo en buscar las clases necesarias, interconectarlas o descubrir los métodos que contienen.
+\end
+En definitiva, menor coste en el diseño, desarrollo, pruebas y mantenimiento de las aplicaciones
+
+\section{Desventajas de un framework}
+
+\begin{itemize}
+\item Limitación de la Flexibilidad: los componentes deben residir dentro de las restricciones impuestas por la arquitectura del Framework
+\item Dificultad de Aprendizaje: el usuario debe estudiar qué proporciona el Framework y cómo debe hacer uso de él.
+\item Reducción de la Creatividad: puede que el usuario no pueda cambiar el comportamiento de una clase del Framework si ésta no permite que sus servicios puedan rescribirse o redefinirse
+\end{itemize}
